tests/fixtures/invalid/min_bytes_float.py
# Cannot call min() with Bytes, Float
x = min(b"hello", 1.0)
